add listen branch (main) for auto page gen

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,7 +1,8 @@
 name: LoxiLB Documentations 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - main
   workflow_dispatch:
 jobs:
   build:
