--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
   - Howto - build/run: run.md
   - Howto - ccm plugin: ccm.md
   - Howto - debug: debugging.md
+  - Howto - loxib with calico bgp: integrate_bgp_eng.md
   - Cmd/Config guide: cmd.md
   - Api usage/dev guide: api.md
   - Performance: perf.md
