--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ nav:
   - Howto - ccm plugin: ccm.md
   - Howto - debug: debugging.md
   - Howto - loxib with calico bgp: integrate_bgp_eng.md
+  - Howto - loxilb in standalone mode: standalone.md
+  - What are loxilb NAT Modes: nat.md
   - Cmd/Config guide: cmd.md
   - Api usage/dev guide: api.md
   - Performance: perf.md
@@ -23,7 +25,7 @@ nav:
   - FAQs: faq.md
 
 extra:
-    version: 0.9.3 (Latest)
+    version: 0.9.4 (Latest)
 
 plugins:
   - mermaid2
