--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,21 @@ site_name: loxilb
 site_url: https://loxilb-io.github.io/loxilbdocs 
 theme:
     name: readthedocs
+    features:
+        - navigation.sections
     analytics:
         gtag: G-21G7NBL2BN 
+
+nav:
+  - Home: index.md
+  - How-To Guides:
+      - How-To - build/run: run.md
+      - How-To - configuration: cmd.md
+      - How-To - kube-loxilb: kube-loxilb.md
+      - How-To - ccm plugin: ccm.md
+      - How-To - debug: debugging.md
+      - How-To - loxilb with calico bgp: integrate_bgp_eng.md
+      - How-To - loxilb in standalone mode: standalone.md
 
 extra:
     version: v0.8.3 (Latest)
