--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,21 @@ nav:
       - How-To - debug: debugging.md
       - How-To - loxilb with calico bgp: integrate_bgp_eng.md
       - How-To - loxilb in standalone mode: standalone.md
-
+  - Knowledge Base:
+      - What is eBPF: ebpf.md
+      - What is k8s service - load-balancer: lb.md
+      - Architecture in brief: arch.md
+      - Code organization: code.md
+      - eBPF internals: loxilbebpf.md
+      - NAT Modes of loxilb: nat.md
+      - Developer's guide to loxicmd: cmd-dev.md
+      - Developer's guide to loxilb API: api-dev.md
+      - Performance Report: perf.md
+      - Development Roadmap: roadmap.md
+      - Contribution Guide: contribute.md
+      - System Requirements: requirments.md
+      - Frequenctly Asked Questions- FAQs: faq.md
+  
 extra:
     version: v0.8.3 (Latest)
 
