--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
       - How-To - debug: debugging.md
       - How-To - loxilb with calico bgp: integrate_bgp_eng.md
       - How-To - loxilb in standalone mode: standalone.md
+      - How-To - loxilb Web-APIs: api.md
   - Knowledge Base:
       - What is eBPF: ebpf.md
       - What is k8s service - load-balancer: lb.md
@@ -32,12 +33,12 @@ nav:
       - System Requirements: requirments.md
       - Frequenctly Asked Questions- FAQs: faq.md
   - Blogs:
-      - 5G SCTP LoadBalancer Using LoxiLB: https://futuredon.medium.com/5g-sctp-loadbalancer-using-loxilb-b525198a9103
-      - 5G Uplink Classifier Using Loxilb: https://futuredon.medium.com/5g-uplink-classifier-using-loxilb-7593a4d66f4c
-      - K3s - Using loxilb as external service lb: https://cloudybytes.medium.com/k3s-using-loxilb-as-external-service-lb-2ea4ce61e159
-      - K8s - Deploying hitless Load-balancing: https://www.loxilb.io/post/k8s-deploying-hitless-and-ha-load-balancing
-      - Ipv6 migration in Kubernetes made easy: https://www.loxilb.io/post/k8s-exposing-ipv4-services-externally-as-ipv6
       - Getting started with loxilb on Amazon EKS: https://www.loxilb.io/post/loxilb-load-balancer-setup-on-eks
+      - 5G SCTP LoadBalancer Using loxilb: https://futuredon.medium.com/5g-sctp-loadbalancer-using-loxilb-b525198a9103
+      - 5G Uplink Classifier Using loxilb: https://futuredon.medium.com/5g-uplink-classifier-using-loxilb-7593a4d66f4c
+      - K3s - Using loxilb as external service lb: https://cloudybytes.medium.com/k3s-using-loxilb-as-external-service-lb-2ea4ce61e159
+      - K8s - Deploying hitless Load-Balancing: https://www.loxilb.io/post/k8s-deploying-hitless-and-ha-load-balancing
+      - Ipv6 migration in Kubernetes made easy: https://www.loxilb.io/post/k8s-exposing-ipv4-services-externally-as-ipv6      
   
 extra:
     version: v0.8.3 (Latest)
