--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: loxilb v0.8.3
+site_name: loxilb v0.8.4
 site_url: https://loxilb-io.github.io/loxilbdocs 
 theme:
     name: mkdocs
@@ -37,13 +37,14 @@ nav:
       - Getting started with loxilb on Amazon EKS: https://www.loxilb.io/post/loxilb-load-balancer-setup-on-eks
       - K8s - Deploying hitless Load-Balancing: https://www.loxilb.io/post/k8s-deploying-hitless-and-ha-load-balancing
       - Ipv6 migration in Kubernetes made easy: https://www.loxilb.io/post/k8s-exposing-ipv4-services-externally-as-ipv6
+      - Load-balancer Perf comparison on Amazon Graviton2: https://www.loxilb.io/post/running-loxilb-on-aws-graviton2-based-ec2-instance
       - Community Posts:
         - 5G SCTP LoadBalancer Using loxilb: https://futuredon.medium.com/5g-sctp-loadbalancer-using-loxilb-b525198a9103
         - 5G Uplink Classifier Using loxilb: https://futuredon.medium.com/5g-uplink-classifier-using-loxilb-7593a4d66f4c
         - K3s - Using loxilb as external service lb: https://cloudybytes.medium.com/k3s-using-loxilb-as-external-service-lb-2ea4ce61e159
   
 extra:
-    version: v0.8.3 (Latest)
+    version: v0.8.4 (Latest)
 
 extra_css:
   - stylesheets/extra.css
