--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
       - How-To - loxilb with calico bgp: integrate_bgp_eng.md
       - How-To - loxilb in standalone mode: standalone.md
       - How-To - loxilb Web-APIs: api.md
+      - How-To - high-availability with loxilb: ha-deploy.md
   - Knowledge Base:
       - What is eBPF: ebpf.md
       - What is k8s service - load-balancer: lb.md
