--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
       - Code organization: code.md
       - eBPF internals: loxilbebpf.md
       - NAT Modes of loxilb: nat.md
+      - loxilb load-balancer algorithms: lb-algo.md
       - Developer's guide to loxicmd: cmd-dev.md
       - Developer's guide to loxilb API: api-dev.md
       - Performance Report: perf.md
