--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,9 +10,10 @@ theme:
 nav:
   - Home: index.md
   - How-To Guides:
+      - How-To - kube-loxilb: kube-loxilb.md
+      - How-To - service-group zones: service-zones.md
       - How-To - build/run: run.md
       - How-To - configuration: cmd.md
-      - How-To - kube-loxilb: kube-loxilb.md
       - How-To - debug: debugging.md
       - How-To - loxilb with calico bgp: integrate_bgp_eng.md
       - How-To - loxilb in standalone mode: standalone.md
