--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,7 @@ nav:
           - K3s - loxilb in-cluster mode: k3s_quick_start_incluster.md
           - K0s - loxilb in-cluster mode: k0s_quick_start_incluster.md
           - MicroK8s - loxilb in-cluster mode: microk8s_quick_start_incluster.md
-      - loxilb as service-proxy
+      - loxilb as service-proxy:
           - K3s - loxilb service-proxy with flannel: service-proxy-flannel.md
           - K3s - loxilb service-proxy with calico: service-proxy-calico.md
   - Knowledge Base:
