--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_url: https://loxilb-io.github.io/loxilbdocs
 repo_name: loxilb-io/loxilb
 repo_url: https://github.com/loxilb-io/loxilb
 theme:
-    name: mkdocs
+    name: material
     features:
         - navigation.expand
         - navigation.instant
