--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: LoxiLB
-site_url: https://loxilb-io.github.io/loxilbdocs
+site_url: https://nik-netlox.github.io/loxilbdocs/
 repo_name: loxilb-io/loxilb
 repo_url: https://github.com/loxilb-io/loxilb
 theme:
