--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,7 +47,7 @@ nav:
       - Service-Proxy Mode:
           - K3s/loxilb service-proxy with flannel: service-proxy-flannel.md
           - K3s/loxilb service-proxy with calico: service-proxy-calico.md
-      - Kubernestes Ingress Mode
+      - Kubernetes Ingress Mode:
           - k3s/Run loxilb-ingress: loxilb-ingress.md
       - Standalone Mode: standalone.md
   - Advanced Guides:
