--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
       - How-To - access end-points outside K8s: ext-ep.md
       - How-To - Deploy multi-server K3s HA with loxilb: k3s-multi-master.md
       - How-To - Deploy loxilb with multi-AZ HA support in AWS: aws-multi-az.md
+      - How-To - Deploy loxilb with multi-cloud HA support: multi-cloud-ha.md
       - How-To - Deploy loxilb with ingress-nginx: loxilb-nginx-ingress.md
   - Knowledge Base:
       - What is eBPF: ebpf.md
