--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,6 +98,7 @@ nav:
 extra:
     version:
         provider: mike
+        default: latest
     homepage: https://www.loxilb.io/
     social:
         - icon: fontawesome/brands/github
