--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,5 +16,5 @@ jobs:
       - run: git config user.name 'github-actions[bot]' && git config user.email 'github-actions[bot]@users.noreply.github.com'
       - name: Publish docs
         run: |
-            mike deploy v0.9.6 latest --update-alias
+            mike deploy --push --update-alias ${{ github.event.release.tag_name }} latest
             mike set-default latest
