--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Publish docs
         run: |
             mike deploy --push --update-alias ${{ github.event.release.tag_name }} latest
-            mike set-default latest
+            mike set-default --push latest
