--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,10 +42,12 @@ nav:
           - K3s/loxilb with calico: k3s_quick_start_calico.md
           - K3s/loxilb with cilium: quick_start_with_cilium.md
           - K0s/loxilb with kube-router: k0s_quick_start.md
+          - EKS/loxilb external mode: eks-external.md
       - In-Cluster Mode:
           - K3s/loxilb in-cluster mode: k3s_quick_start_incluster.md
           - K0s/loxilb in-cluster mode: k0s_quick_start_incluster.md
           - MicroK8s/loxilb in-cluster mode: microk8s_quick_start_incluster.md
+          - EKS/loxilb incluster mode: eks-incluster.md
       - Service-Proxy Mode:
           - K3s/loxilb service-proxy with flannel: service-proxy-flannel.md
           - K3s/loxilb service-proxy with calico: service-proxy-calico.md
