--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: LoxiLB
-site_url: https://TrekkieCoder.github.io/loxilbdocs
-repo_name: TrekkieCoder/loxilbdocs
-repo_url: https://github.com/TrekkieCoder/loxilb
+site_url: https://loxilb-io.github.io/loxilbdocs
+repo_name: loxilb-io/loxilb
+repo_url: https://github.com/loxilb-io/loxilb
 theme:
     name: material
     custom_dir: overrides
@@ -107,6 +107,7 @@ extra:
         default: latest
         alias: true
     homepage: https://www.loxilb.io/
+    generator: false
     social:
         - icon: fontawesome/brands/github
           link: https://github.com/loxilb-io/loxilb
